--- a/src/Results.css
+++ b/src/Results.css
@@ -2,4 +2,17 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow-y: overlay;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.results::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.results {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  padding-bottom: 20px;
 }
